@@ -9,12 +9,12 @@ TBL2PM = $(PLDIR)tbl2pm.pl
 PM_jis = jisx0208_1978.pm jisx0208_1978_irv.pm \
   jisx0208_1983.pm jisx0208_1983_irv.pm jisx0208_1990.pm \
   jisx0208_1990_open_0201.pm jisx0208_1990_open_ascii.pm \
-  jisx0208_1997.pm jisx0208_1997_irv.pm jisx0208_1997_latin.pm \
+  jisx0208_1997.pm jisx0208_1997_irv.pm jisx0208_1997_latin.pm jisx0208_1997_yen.pm \
   jisx0212_1990.pm jisx0212_1990_irv.pm jisx0212_0213.pm \
   jisx0212_1990_open_0201.pm jisx0212_1990_open_ascii.pm \
   jisx0212_1990_open_ms.pm \
   jisx0213_2000_1.pm jisx0213_2000_1_esc_24_42.pm jisx0213_2000_2.pm \
-  jisx0201_latin.pm jisx0201_katakana.pm
+  jisx0201_latin.pm jisx0201_katakana.pm ascii_yen.pm
 PM_gb = gb2312_1980.pm gb12345_1990.pm iso_ir_165.pm
 PM_ks = ksx1001_1992.pm
 PM_kps = kps9566_1997.pm
