@@ -1,0 +1,41 @@
+#?o name="ASCII + YEN SIGN instead of REVERSED SOLIDUS"
+#?o table-name="ascii_yen"
+#?o charset-chars="94"
+#?o charset-dimension="1"
+#?o charset-final-byte="B"
+#?o offset="33"
+#?o license="Public Domain"
+0x21	U+0021		# EXCLAMATION MARK
+0x22	U+0022		# QUOTATION MARK
+0x23	U+0023		# NUMBER SIGN
+0x24	U+0024		# DOLLAR SIGN
+0x25	U+0025		# PERCENT SIGN
+0x26	U+0026		# AMPERSAND
+0x27	U+0027		# APOSTROPHE
+0x28	U+0028		# LEFT PARENTHESIS
+0x29	U+0029		# RIGHT PARENTHESIS
+0x2A	U+002A		# ASTERISK
+0x2B	U+002B		# PLUS SIGN
+0x2C	U+002C		# COMMA
+0x2D	U+002D		# HYPHEN-MINUS
+0x2E	U+002E		# FULL STOP
+0x2F	U+002F		# SOLIDUS
+#?import src="gl-iso-646-alphanumeric.tbr"
+0x3A	U+003A		# COLON
+0x3B	U+003B		# SEMICOLON
+0x3C	U+003C		# LESS-THAN SIGN
+0x3D	U+003D		# EQUALS SIGN
+0x3E	U+003E		# GREATER-THAN SIGN
+0x3F	U+003F		# QUESTION MARK
+0x40	U+0040		# COMMERCIAL AT
+0x5B	U+005B		# LEFT SQUARE BRACKET
+0x5C	U+00A5		# YEN SIGN
+0x5D	U+005D		# RIGHT SQUARE BRACKET
+0x5E	U+005E		# CIRCUMFLEX ACCENT
+0x5F	U+005F		# LOW LINE
+0x60	U+0060		# GRAVE ACCENT
+0x7B	U+007B		# LEFT CURLY BRACKET
+0x7C	U+007C		# VERTICAL LINE
+0x7D	U+007D		# RIGHT CURLY BRACKET
+0x7E	U+007E		# TILDE
+#; $Date: 2002/12/18 12:57:40 $
